zeit.brightcove changes
=======================


0.3.1 (unreleased)
------------------

- First load all playlists, then delete solr, then update solr.


0.3.0 (2010-05-03)
------------------

- The repository does not access the Brightcove API directly anymore, it only
  functions as a local cache. It is populated periodically by cron (Solr is
  updated then, too, as a "byproduct"). (#7150, #7163)


0.2.1 (2010-04-27)
------------------

- Fully implement IPublishInfo interface for videos and playlist.


0.2.0 (2010-04-22)
------------------

- videoIds in Playlists are a property
- added IBCContent between ICMSContent and IBrightcoveContent 
- IReferenceProvider adapted, which returns a list of IBCContent
  (to avoid API-Calls)
- set timdedelta for modified videos to 2hours. this decreases amount of
  timeouts

0.1.2 (2010-04-14)
------------------

- brightcove will delete all videos with state != ACTIVE from internal and
  public solr 


0.1.1 (2010-04-12)
------------------

- better handling for page iteration using brightcove API.


0.1.0 (2010-04-09)
------------------

- First release