@@ -1,7 +1,6 @@
 # Copyright (c) 2010 gocept gmbh & co. kg
 # See also LICENSE.txt
 
-import gocept.async.tests
 import zeit.brightcove.solr
 import zeit.brightcove.testing
 import zeit.cms
@@ -19,14 +18,12 @@ class TestSolrIndexing(zeit.brightcove.testing.BrightcoveTestCase):
         self.public_solr = zope.component.getUtility(
             zeit.solr.interfaces.ISolr, name='public')
         # clear out indexing requests queued up by the test setup
-        gocept.async.tests.process()
         self.solr.reset_mock()
         self.public_solr.reset_mock()
 
     def test_updating_repository_should_index_contents(self):
         self.repository._data.clear()
         self.repository.update_from_brightcove()
-        gocept.async.tests.process()
         self.assertTrue(self.solr.update_raw.called)
         self.assertEquals(5, len(self.solr.update_raw.call_args_list))
         self.assertEquals(5, len(self.public_solr.update_raw.call_args_list))
@@ -51,8 +48,10 @@ class TestSolrIndexing(zeit.brightcove.testing.BrightcoveTestCase):
             ['http://video.zeit.de/playlist/3456'],
             element_add.xpath("/add/doc/field[@name='uniqueId']"))
 
-    def test_updating_repository_should_delete_playlists_from_solr(self):
-        self.repository.update_from_brightcove()
+    def test_deleted_playlists_removed_from_solr(self):
+        pls = self.repository['playlist:2345']
+        pls.item_state = 'DELETED'
+        zope.lifecycleevent.modified(pls)
         self.assertTrue(self.solr.delete.called)
         self.assertTrue(self.public_solr.delete.called)
 
